tests/NormalTests/paczka1/small_fuzzy/31841642.err
Error in line 3: S9 S542 27,1
Error in line 1: Kz9e2kHkGi S780 85,5
Error in line 8: Kz9e2kHkGi S780 24,4
Error in line 13: S9 S542 19,4
Error in line 15: S9 S542 38,8
